iis-2vm-sql-1vm/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
            },
            "defaultValue": "https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/iis-2vm-sql-1vm/"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated."
            },
            "defaultValue": ""
        },
        "envPrefixName": {
            "type": "string",
            "metadata": {
                "description": "Prefix for the environment (2-5 characters)"
            },
            "defaultValue": "cust1",
            "minLength": 2,
            "maxLength": 5
        },
        "username": {
            "type": "string",
            "metadata": {
                "description": "SQL IaaS VM local administrator username"
            }
        },
        "password": {
            "type": "securestring",
            "metadata": {
                "description": "SQL IaaS VM local administrator password"
            }
        },
        "webSrvVMSize": {
            "type": "string",
            "allowedValues": [
                "Standard_B2S"
            ],
            "metadata": {
                "description": "The size of the Web Server VMs Created"
            },
            "defaultValue": "Standard_B2S"
        },
        "numberOfWebSrvs": {
            "type": "int",
            "metadata": {
                "description": "Number of Web Servers"
            },
            "allowedValues": [
                1,
                2
            ],
            "defaultValue": 1
        },
        "sqlVMSize": {
            "type": "string",
            "allowedValues": [
                "Standard_B2S"
            ],
            "metadata": {
                "description": "The size of the SQL VM Created"
            },
            "defaultValue": "Standard_B2S"
        },
        "diskType": {
            "type": "string",
            "allowedValues": [
                "Standard_LRS",
                "Premium_LRS"
            ],
            "metadata": {
                "description": "The type of the Storage Account created"
            },
            "defaultValue": "Premium_LRS"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        }
    },
    "variables": {
        "virtualNetworkName": "[concat(parameters('envPrefixName'), 'Vnet')]",
        "addressPrefix": "10.0.0.0/16",
        "feSubnetPrefix": "10.0.0.0/24",
        "dbSubnetPrefix": "10.0.2.0/24",
        "feNSGName": "feNsg",
        "dbNSGName": "dbNsg",
        "sqlSrvDBName": "[concat(parameters('envPrefixName'), 'sqlSrv14')]",
        "sqlVmSize": "[parameters('sqlVMSize')]",
        "sqlSrvDBNicName": "[concat(variables('sqlSrvDBName'), 'Nic')]",
        "sqlSvrDBSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), 'DBSubnetName')]",
        "sqlPublicIP": "[concat(parameters('envPrefixName'), 'SqlPip')]",
        "sqlPublicIPRef": "[resourceId('Microsoft.Network/publicIPAddresses', variables('sqlPublicIP'))]",
        "sqlImagePublisher": "MicrosoftSQLServer",
        "sqlImageOffer": "SQL2014SP2-WS2012R2",
        "sqlImageSku": "Standard",
        "webSrvName": "[concat(parameters('envPrefixName'), 'webSrv')]",
        "webSrvVMSize": "[parameters('webSrvVMSize')]",
        "webSrvNicName": "[concat(variables('webSrvName'), 'Nic')]",
        "webSrvSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), 'FESubnetName')]",
        "webSrvPublicIP": "[concat(parameters('envPrefixName'), 'websrvpip')]",
        "webSrvAvailabilitySetName": "[concat(parameters('envPrefixName'), 'webSrvAS')]",
        "webSrvNumbOfInstances": "[parameters('numberOfWebSrvs')]",
        "webSrvDnsNameforLBIP": "[concat(toLower(variables('webSrvName')), 'lb')]",
        "webLbName": "[concat(variables('webSrvName'), 'lb')]",
        "webLblb_PIP_Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('webSrvPublicIP'))]",
        "webLbId": "[resourceId('Microsoft.Network/loadBalancers',variables('webLbName'))]",
        "frontEndIPConfigID": "[concat(variables('webLbId'),'/frontendIPConfigurations/LoadBalancerFrontEnd')]",
        "lbPoolID": "[concat(variables('webLbId'),'/backendAddressPools/BackendPool1')]",
        "lbProbeID": "[concat(variables('webLbId'),'/probes/tcpProbe')]",
        "vmExtensionName": "dscExtension",
        "modulesUrl": "[concat(parameters('_artifactsLocation'), 'scripts/WebServerConfig.ps1.zip', parameters('_artifactsLocationSasToken'))]",
        "configurationFunction": "WebServerConfig.ps1\\WebServerConfig"
    },
    "resources": [
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('feNSGName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "FrontEndNSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "rdp_rule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "web_rule",
                        "properties": {
                            "description": "Allow WEB",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "name": "[variables('dbNSGName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "BackEndNSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_FE",
                        "properties": {
                            "description": "Allow FE Subnet",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "10.0.0.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "rdp_rule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Block_FE",
                        "properties": {
                            "description": "Block App Subnet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 121,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Block_Internet",
                        "properties": {
                            "description": "Block Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Deny",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('feNSGName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('dbNSGName'))]"
            ],
            "tags": {
                "displayName": "VirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "FESubnetName",
                        "properties": {
                            "addressPrefix": "[variables('feSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('feNSGName'))]"
                            }
                        }
                    },
                    {
                        "name": "DBSubnetName",
                        "properties": {
                            "addressPrefix": "[variables('dbSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbNSGName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('sqlPublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "tags": {
                "displayName": "SqlPIP"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            }
        },
        {
            "name": "[variables('sqlSrvDBNicName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "tags": {
                "displayName": "SQLSrvDBNic"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('sqlSvrDBSubnetRef')]"
                            },
                            "publicIPAddress": {
                                "id": "[variables('sqlPublicIPRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('envPrefixName'), 'sqlSrv14')]",
            "type": "Microsoft.Compute/virtualMachines",
            "location": "[parameters('location')]",
            "apiVersion": "2017-03-30",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('sqlSrvDBNicName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', variables('sqlPublicIP'))]"
            ],
            "tags": {
                "displayName": "SQL-Svr-DB"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('sqlVmSize')]"
                },
                "osProfile": {
                    "computerName": "[variables('sqlSrvDBName')]",
                    "adminUsername": "[parameters('username')]",
                    "adminPassword": "[parameters('password')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('sqlImagePublisher')]",
                        "offer": "[variables('sqlImageOffer')]",
                        "sku": "[variables('sqlImageSku')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(variables('sqlSrvDBName'),'_OSDisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('diskType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('sqlSrvDBNicName'))]"
                        }
                    ]
                }
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/availabilitySets",
            "location": "[parameters('location')]",
            "name": "[variables('webSrvAvailabilitySetName')]",
            "properties": {
                "PlatformUpdateDomainCount": 20,
                "PlatformFaultDomainCount": 2
            },
            "tags": {
                "displayName": "WebSrvAvailabilitySet"
            },
            "sku": {
                "name": "Aligned"
            }
        },
        {
            "name": "[variables('webSrvPublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "tags": {
                "displayName": "WebSrvPIP for LB"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('webSrvDnsNameforLBIP')]"
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "name": "[variables('webLbName')]",
            "type": "Microsoft.Network/loadBalancers",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "Web LB"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('webSrvPublicIP'))]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[variables('webLblb_PIP_Id')]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "BackendPool1"
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "RDP-VM0",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 50001,
                            "backendPort": 3389,
                            "enableFloatingIP": false
                        }
                    },
                    {
                        "name": "RDP-VM1",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 50002,
                            "backendPort": 3389,
                            "enableFloatingIP": false
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "LBRule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "backendAddressPool": {
                                "id": "[variables('lbPoolID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[variables('lbProbeID')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "tcpProbe",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('webSrvNicName'), copyindex())]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "copy": {
                "name": "nicLoop",
                "count": "[variables('webSrvNumbOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/loadBalancers/', variables('webLbName'))]"
            ],
            "tags": {
                "displayName": "WebSrvNic"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('webSrvSubnetRef')]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(variables('webLbId'), '/backendAddressPools/BackendPool1')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(variables('webLbId'),'/inboundNatRules/RDP-VM', copyindex())]"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('webSrvName'), copyindex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "location": "[parameters('location')]",
            "apiVersion": "2017-03-30",
            "copy": {
                "name": "webSrvMachineLoop",
                "count": "[variables('webSrvNumbOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('webSrvNicName'), copyindex())]",
                "[concat('Microsoft.Compute/availabilitySets/', variables('webSrvAvailabilitySetName'))]"
            ],
            "tags": {
                "displayName": "WebSrv"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('webSrvAvailabilitySetName'))]"
                },
                "hardwareProfile": {
                    "vmSize": "[variables('webSrvVMSize')]"
                },
                "osProfile": {
                    "computerName": "[concat(variables('webSrvName'),copyindex())]",
                    "adminUsername": "[parameters('username')]",
                    "adminPassword": "[parameters('password')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(concat(variables('webSrvName'),copyindex(),'_OSDisk'))]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('diskType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('webSrvNicName'), copyindex()))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('webSrvName'), copyindex(),'/', variables('vmExtensionName'))]",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "copy": {
                "name": "webSrvMachineLoop",
                "count": "[variables('webSrvNumbOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', variables('webSrvName'), copyindex())]"
            ],
            "tags": {
                "displayName": "VM Extensions"
            },
            "properties": {
                "publisher": "Microsoft.Powershell",
                "type": "DSC",
                "typeHandlerVersion": "2.19",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "ModulesUrl": "[variables('modulesUrl')]",
                    "SasToken": "",
                    "ConfigurationFunction": "[variables('configurationFunction')]",
                    "wmfVersion": "4.0",
                    "Properties": {}
                },
                "protectedSettings": {}
            }
        }
    ]
}
